feat(Testing) : - Ajout de profil avec login. - Centralisation des styles. - Ajoute d'une sécurisation des mdp par hachage.